LayoutTests:

Reviewed by Darin and Mitz.

        - Test for http://bugs.webkit.org/show_bug.cgi?id=12305
          REGRESSION: Images do not load in video sections on CNN.com homepage

        * fast/dom/HTMLImageElement/image-lowsrc-getset-expected.txt: Added.
        * fast/dom/HTMLImageElement/image-lowsrc-getset.html: Added.

WebCore:

        Reviewed by Darin and Mitz.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12305
          REGRESSION: Images do not load in video sections on CNN.com homepage

        <rdar://problem/4931480> REGRESSION: Images do not load in video sections on CNN.com homepage (12305)

        Test: fast/dom/HTMLImageElement/image-lowsrc-getset.html

        * html/HTMLAttributeNames.in: Added lowsrc.
        * html/HTMLImageElement.cpp:
        (WebCore::HTMLImageElement::isURLAttribute): Added lowsrc.
        (WebCore::HTMLImageElement::lowsrc): Added.
        (WebCore::HTMLImageElement::setLowsrc): Added.
        * html/HTMLImageElement.h: Added lowsrc and setLowsrc.
        * html/HTMLImageElement.idl: Added lowsrc.



Canonical link: https://commits.webkit.org/15930@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18940 268f45cc-cd09-0410-ab3c-d52691b4dbfc