WebCore/html/HTMLImageElement.h
@@ -91,6 +91,9 @@ public:
     String longDesc() const;
     void setLongDesc(const String&);
 
+    String lowsrc() const;
+    void setLowsrc(const String&);
+
     String src() const;
     void setSrc(const String&);
 
